# REST-FastAPI

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: python-publish.yml
app/: hashing.py  schema.py  token.py
app/db/: database.py  models.py
app/repository/: auth.py  user.py
app/router/: auth.py  user.py
core/: config.py
migrations/: env.py
migrations/versions/: 212bd8c97a85_create_tables.py
myEnvironment/: pyvenv.cfg
